# FirstCMake

./: .cmake-format  .gitattributes  .gitignore  Build.ps1  CMakeLists.txt  FirstCMake.sln
.github/workflows/: auto-version.yml  ci.yml  code-quality.yml
Code/Game/: Game.vcxproj  Game.vcxproj.filters
Code/Game/include/: Utils.h
Code/Game/lib/: Utils.cpp
Code/Game/src/: FirstCMake.cpp
Docs/: README.md
